force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/Outcome_Indicator_Variable_Configuration__c.object-meta.xml
<CustomObject>
    <description>A Variable helps to determine a value for an Indicator.</description>
    <label>Outcome Indicator Variable Configuration</label>
    <nameField>
        <displayFormat>OIVC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcome Indicator Variable Configuration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>