force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/fields/Extension_SObject__c.field-meta.xml
<CustomField>
    <fullName>Extension_SObject__c</fullName>
    <description>The name of the extension sObject paired with sObject__c</description>
    <formula>IF(ISNULL(sObject__c), &apos;&apos;,LEFT(sObject__c,LEN(sObject__c) - 3) + &apos;Extension__c&apos;)</formula>
    <inlineHelpText>The name of the extension sObject paired with sObject__c</inlineHelpText>
    <label>Extension SObject</label>
    <type>Text</type>
</CustomField>