force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <formula>Outcome_Indicator_Configuration__r.Is_Locked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>