force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>