force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/fields/OI_Configuration_Label__c.field-meta.xml
<CustomField>
    <fullName>OI_Configuration_Label__c</fullName>
    <formula>Outcome_Indicator_Configuration__r.Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OI Configuration Label</label>
    <type>Text</type>
</CustomField>