force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/fields/Outcome_Indicator_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Indicator_Configuration__c</fullName>
    <label>Outcome Indicator Configuration</label>
    <referenceTo>Outcome_Indicator_Configuration__c</referenceTo>
    <relationshipLabel>Outcome Indicator Variable Configuration</relationshipLabel>
    <relationshipName>Outcome_Indicator_Variable_Configuration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>