force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/fields/Outcome_Indicator_Variable_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Indicator_Variable_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Outcome Indicator Variable Type</label>
    <referenceTo>Outcome_Indicator_Variable_Type__c</referenceTo>
    <relationshipLabel>Outcome Indicator Variable Type</relationshipLabel>
    <relationshipName>Outcome_Indicator_Variable_Type</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>