force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/fields/Parent_sObject__c.field-meta.xml
<CustomField>
    <fullName>Parent_sObject__c</fullName>
    <description>The Parent sObject as defined by the Outcome Configuration</description>
    <formula>Outcome_Indicator_Configuration__r.Outcome_Configuration__r.Parent_sObject__c</formula>
    <inlineHelpText>The Parent sObject as defined by the Outcome Configuration</inlineHelpText>
    <label>Parent sObject</label>
    <type>Text</type>
</CustomField>