force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/fields/Parent_sObject_Ref__c.field-meta.xml
<CustomField>
    <fullName>Parent_sObject_Ref__c</fullName>
    <inlineHelpText>The lookup field to the parent sobject.</inlineHelpText>
    <label>Parent sObject Ref</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>