force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <description>Api name of the sObject this variable derives it&apos;s value from.</description>
    <label>sObject</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>