force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/fields/sObject_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>sObject_Field_Name__c</fullName>
    <description>Field on sObject that this variable derives its value from.</description>
    <label>sObject Field Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>