force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/fields/SObject_Record_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>SObject_Record_Type_Label__c</fullName>
    <inlineHelpText>One Record Type per sObject per Outcome Configuration.</inlineHelpText>
    <label>SObject Record Type Label</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>