force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>The relative weight of the Variable in calculating a value for an Indicator</description>
    <label>Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>