force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/validationRules/Exp_Weight_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Weight_Range</fullName>
    <active>true</active>
    <description>Weight value must be null or fall between 0 and 100</description>
    <errorConditionFormula>IF(Weight__c&lt;0 || Weight__c &gt;1, true, false)</errorConditionFormula>
    <errorDisplayField>Weight__c</errorDisplayField>
    <errorMessage>Weight value must be null or fall between 0 and 100</errorMessage>
</ValidationRule>