force-app/main/default/objects/Outcome_Indicator_Variable_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>sObject__c</columns>
    <columns>sObject_Field_Name__c</columns>
    <columns>Parent_sObject_Ref__c</columns>
    <columns>Weight__c</columns>
    <columns>Outcome_Indicator_Variable_Type__c</columns>
    <columns>Outcome_Indicator_Configuration__c</columns>
    <columns>OI_Configuration_Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>